# street-cred

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  tarpaulin.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
src/: encryption.rs  lib.rs  main.rs  serialization.rs
src/encryption/: cipher_generation.rs  file_encryptor.rs  message_encryptor.rs
src/serialization/: ruby_marshal.rs
tests/fixtures/: encoded.txt.enc  no_encryption.txt
