[package]
name = "street-cred"
version = "0.1.4"
edition = "2024"
authors = ["Endoze <endoze@endozemedia.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Endoze/street-cred"
documentation = "https://docs.rs/street-cred"
homepage = "https://github.com/Endoze/street-cred"
description = "Manage encrypted secrets for your applications."

[lib]
name = "street_cred"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1" 
clap = { version = "4.5.38", features = ["derive"] }
base64 = { version = "0.22.1" }
hex = { version = "0.4.3" }
shellexpand = { version = "3.1" }
thurgood = { version = "0.2.1" }
anyhow = { version = "1.0.98" }
aes-gcm = "0.10.3"

[dev-dependencies]
assert_fs = { version = "1.1.3" }
lazy_static = { version = "1.5.0" }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
