[package]
name = "street-cred"
version = "0.1.7"
edition = "2024"
rust-version = "1.88"
authors = ["Endoze <endoze@endozemedia.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Endoze/street-cred"
documentation = "https://docs.rs/street-cred"
homepage = "https://github.com/Endoze/street-cred"
description = "Manage encrypted secrets for your applications."
categories = ["cryptography", "command-line-utilities", "config"]
keywords = ["secrets", "encryption", "credentials", "aes", "config"]

[lib]
name = "street_cred"

[dependencies]
clap = { version = "4.6.2", features = ["derive"] }
base64 = { version = "0.22.1" }
hex = { version = "0.4.3" }
shellexpand = { version = "3.1" }
thurgood = { version = "0.2.1" }
anyhow = { version = "1.0.104" }
aes-gcm = "0.11.0"
getrandom = { version = "0.4.3" }

[dev-dependencies]
assert_fs = { version = "1.1.4" }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
